Fix output overlap
Since bk-output-display uses ng-show the element is display:none when the
output is hidden, thus causing the min-height to no longer be applied.

Fixes #1853

--- a/core/src/main/web/app/styles/cell-outputs.scss
+++ b/core/src/main/web/app/styles/cell-outputs.scss
@@ -20,10 +20,6 @@ bk-code-cell-output {
   }
 }
 
-.advanced-mode bk-output-display.bkr {
-  min-height: 20px;
-}
-
 .markup, .dataTables_scrollBody {
   box-sizing: content-box;
 }
